<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="db_name">list_orders.sqlite</string>
    <string name="db_version">3</string>
    <string name="app_name">list_orders</string>

    <string-array name="font_size_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="db">Database</string>
    <string name="db_backup_summary">Make a backup copy of the database (on the card) every time you exit the program.</string>
    <string name="db_backups_all">Only the last five"</string>
    <string name="db_backups_all_summary">Leave only the last five backup copy. The rest is automatically deleted.</string>
    <string name="db_backups_summary">Backup management.</string>
    <string name="category_all">All Categories</string>
    <string name="category">Category</string>
    <string name="management">Management</string>
    <string name="managment_select">Groups, types, statuses</string>
    <string name="exit">Quit</string>
    <string name="exit_title">Exit the application?</string>
    <string name="exit_text">Do you really want to quit?</string>
    <string name="preference">Settings</string>
    <string name="refresh">Update</string>
    <string name="add">Add</string>
    <string name="add_title">Addition</string>
    <string name="add_text">Enter the name of:</string>
    <string name="save">Save</string>
    <string name="saved">The entry is saved</string>
    <string name="edit">Edit</string>
    <string name="edit_title">Editing</string>
    <string name="edit_text">Enter the name of:</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete?</string>
    <string name="delete_text">Do you really want to delete?</string>
    <string name="number">Quantity</string>
    <string name="status">Status</string>
    <string name="status_set">Assign status</string>
    <string name="show">Show</string>
    <string name="sort">Sort</string>
    <string name="sort_name">Sort by name</string>
    <string name="sort_date">Sort by date</string>
    <string name="code">Code</string>
    <string name="main">List of orders</string>
    <string name="restory">Backups</string>
    <string name="restoryed">Backup copy impeccably renovated</string>
    <string name="revert">Recover</string>
    <string name="revert_create">Create a copy</string>
    <string name="backup">Backup</string>
    <string name="backups">Backups</string>
    <string name="backuped">Backup copy saved</string>
    <string name="export">Export to CSV</string>
    <string name="send_sms">Send SMS</string>
    <string name="intetface">Interface</string>
    <string name="all_done">All completed!</string>
    <string name="user">User</string>
    <string name="users">Users</string>
    <string name="users_groups">User Groups</string>
    <string name="users_group">User Group</string>
    <string name="users_group_summary">Manage user groups</string>
    <string name="users_contact">User contact</string>
    <string name="users_manager">User Management</string>
    <string name="users_contact_using">Contact is</string>
    <string name="users_edit_title">Editing user</string>
    <string name="users_edit_text">Enter the last name and first name:</string>
    <string name="users_add_title">Adding a User</string>
    <string name="users_add_text">Enter the last name and first name:</string>
    <string name="contact">Contacts</string>
    <string name="item">Item</string>
    <string name="items">"Items"</string>
    <string name="item_type">Type</string>
    <string name="items_manager">Items Management</string>
    <string name="items_edit_title">Edit Item</string>
    <string name="items_edit_text">Enter the name of:</string>
    <string name="items_add_title">Adding Item</string>
    <string name="items_add_text">Enter the name of:</string>
    <string name="items_type">Types of items</string>
    <string name="items_type_summary">Managing types of items</string>
    <string name="orders">Orders</string>
    <string name="orders_list">Orders - list</string>
    <string name="orders_manager">Order Management</string>
    <string name="orders_status">Order status</string>
    <string name="orders_list_items">The order list by category</string>
    <string name="orders_list_users_per_items">List of orders on the item</string>
    <string name="order_details">Customized</string>
    <string name="orders_status_summary">Status Management Orders</string>
    <string name="warehous">Warehouse</string>
    <string name="warehous_manager">Warehouse Management</string>
    <string name="font_size">Font size</string>
    <string name="font_size_summary">Select the size of the displayed text</string>
    <string name="filtr">Filter</string>
    <string name="filtrs">Filters</string>
    <string name="filtr_it_t">Item Filter</string>
    <string name="filtr_it_t_summary">Filter your categories of items</string>
    <string name="filtr_st">Filter status</string>
    <string name="filtr_st_summary">Display filter status</string>
    <string name="barcode_scan">Scan the barcode</string>
    <string name="barcode_title">Install Barcode Scanner?</string>
    <string name="barcode_text">For this feature needs Barcode Scanner. Do you want to install it now?</string>
    <string name="wait_title">Expect</string>
    <string name="wait_mess">The data is processed</string>
    <string name="analytics">Reporting</string>
    <string name="analytics_summary">Allow to automatically send reports on the application?</string>

    <string-array name="font_size">
        <item>Tiny</item>
        <item>Small</item>
        <item>Normal</item>
        <item>Big</item>
    </string-array>

</resources>